Fix home page facets.

--- a/themes/bootstrap3/templates/ContentBlock/FacetList.phtml
+++ b/themes/bootstrap3/templates/ContentBlock/FacetList.phtml
@@ -20,6 +20,7 @@
                 'facetList' => $details['list'],
                 'group' => $field,
                 'url' => $results->getUrlQuery(),
+                'urlBase' => $this->url($options->getSearchAction()),
               ]) ?>
             <?php else: ?>
               <?php
