--- a/themes/bootstrap3/templates/Recommend/SideFacets/hierarchical-facet.phtml
+++ b/themes/bootstrap3/templates/Recommend/SideFacets/hierarchical-facet.phtml
@@ -25,5 +25,6 @@
     'facetList' => $this->cluster['list'],
     'group' => $this->title,
     'url' => $this->results->getUrlQuery(),
+    'urlBase' => '',
   ]) ?>
 </ul>
