--- a/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/core.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/core.phtml
@@ -165,7 +165,7 @@ if ($availCode == 'od_code_login_for_avail') {
     $this->extraControls = $extraControls;
 } //end if avail
 
-if (!empty($previews) && $previews->url) {
+if (!empty($previews->url)) {
     $this->previewOverride = "<a href=\"{$previews->url}\" target=\"_blank\" class=\"btn btn-primary\">Sample</a>";
 }
 echo $this->render('RecordDriver/DefaultRecord/core.phtml');
