--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -477,6 +477,8 @@ ul.list-group {
       }
     }
     td:before {
+      display: flex;
+      align-items: last baseline;
       flex-basis: 30%;
       flex-shrink: 1;
       font-weight: bold;
