--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -3,12 +3,16 @@
   $this->headTitle($this->translate('Book Bag'));
 
   // Set up breadcrumbs:
-  $this->layout()->breadcrumbs = $this->searchMemory()->getLastSearchLink($this->transEsc('Search'), '<li>', '</li> ')
+  $this->layout()->breadcrumbs = $this->searchMemory()->getLastSearchLink($this->transEsc('Search'), '<li>', '</li> ');
+
+  // Get action limits
+  $actionLimits = $this->config()->get('config')?->BulkActions?->limits;
 ?>
 <h2><?=$this->transEsc('Book Bag') ?></h2>
 <?=$this->flashmessages()?>
 <form class="form-inline" action="<?=$this->url('cart-processor')?>" method="post"  name="cartForm" data-lightbox-onsubmit="cartFormHandler">
   <input type="hidden" id="dropdown_value">
+  <input type="hidden" name="redirectInLightbox" value="true">
   <?php if (!$this->cart()->isEmpty()): ?>
     <div class="cart-controls">
       <div class="checkbox">
@@ -18,7 +22,7 @@
         </label>
       </div>
       <ul class="cart-control-btns">
-        <?php if ($this->userlist()->getMode() !== 'disabled'): ?>
+        <?php if (($actionLimits?->save ?? 0) > 0 && $this->userlist()->getMode() !== 'disabled'): ?>
           <li>
             <button type="submit" class="toolbar-btn" name="saveCart" title="<?=$this->transEscAttr('bookbag_save')?>" value="1">
               <?=$this->icon('user-list-add', 'icon-link__icon') ?>
@@ -26,14 +30,16 @@
             </button>
           </li>
         <?php endif; ?>
-        <li>
-          <button type="submit" class="toolbar-btn" name="email" title="<?=$this->transEscAttr('bookbag_email')?>" value="1">
-            <?=$this->icon('send-email', 'icon-link__icon') ?>
-            <span class="icon-link__label"><?=$this->transEsc('Email')?></span>
-          </button>
-        </li>
+        <?php if (($actionLimits?->email ?? 0) > 0): ?>
+          <li>
+            <button type="submit" class="toolbar-btn" name="email" title="<?=$this->transEscAttr('bookbag_email')?>" value="1">
+              <?=$this->icon('send-email', 'icon-link__icon') ?>
+              <span class="icon-link__label"><?=$this->transEsc('Email')?></span>
+            </button>
+          </li>
+        <?php endif; ?>
         <?php $exportOptions = $this->export()->getActiveFormats('bulk'); ?>
-        <?php if (count($exportOptions) > 0): ?>
+        <?php if (($actionLimits?->export ?? 0) > 0 && count($exportOptions) > 0): ?>
           <li>
             <button type="submit" class="toolbar-btn" name="export" title="<?=$this->transEscAttr('bookbag_export')?>" value="1">
               <?=$this->icon('export', 'icon-link__icon') ?>
@@ -41,12 +47,14 @@
             </button>
           </li>
         <?php endif; ?>
-        <li>
-          <button type="submit" class="toolbar-btn" name="print" title="<?=$this->transEscAttr('print_selected')?>" value="1">
-            <?=$this->icon('print', 'icon-link__icon') ?>
-            <span class="icon-link__label"><?=$this->transEsc('Print')?></span>
-          </button>
-        </li>
+        <?php if (($actionLimits?->printcart ?? 0) > 0): ?>
+          <li>
+            <button type="submit" class="toolbar-btn" name="print" title="<?=$this->transEscAttr('print_selected')?>" value="1" data-item-limit="<?=$actionLimits?->printcart?>">
+              <?=$this->icon('print', 'icon-link__icon') ?>
+              <span class="icon-link__label"><?=$this->transEsc('Print')?></span>
+            </button>
+          </li>
+        <?php endif; ?>
         <li class="btn-group" id="cartDelete">
           <button type="submit" name="delete" class="toolbar-btn dropdown-toggle" data-toggle="dropdown" id="cart-delete-label" value="1">
             <?=$this->icon('cart-remove', 'icon-link__icon') ?>
