--- a/themes/bootstrap3/templates/search/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/search/bulk-action-buttons.phtml
@@ -10,17 +10,17 @@ $actionLimits = $this->config()->get('config')?->BulkActions?->limits;
     <ul class="action-toolbar">
       <?php if (isset($this->showBulkOptions) && $this->showBulkOptions): ?>
         <?php if (($actionLimits?->email ?? 0) > 0): ?>
-          <li><button id="<?=$this->idPrefix?>ribbon-email" class="toolbar-btn" type="submit" name="email" value="1" title="<?=$this->transEscAttr('bookbag_email_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('send-email') ?> <?=$this->transEsc('Email')?></button></li>
+          <li><button id="<?=$this->idPrefix?>ribbon-email" class="toolbar-btn" type="submit" name="email" value="1" title="<?=$this->transEscAttr('bookbag_email_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?> data-item-limit="<?=$actionLimits?->email?>"><?=$this->icon('send-email') ?> <?=$this->transEsc('Email')?></button></li>
         <?php endif; ?>
         <?php $exportOptions = $this->export()->getActiveFormats('bulk'); ?>
         <?php if (($actionLimits?->export ?? 0) > 0 && count($exportOptions) > 0): ?>
-          <li><button id="<?=$this->idPrefix?>ribbon-export" class="toolbar-btn" type="submit" name="export" value="1" title="<?=$this->transEscAttr('bookbag_export_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('export') ?> <?=$this->transEsc('Export')?></button></li>
+          <li><button id="<?=$this->idPrefix?>ribbon-export" class="toolbar-btn" type="submit" name="export" value="1" title="<?=$this->transEscAttr('bookbag_export_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?> data-item-limit="<?=$actionLimits?->export?>"><?=$this->icon('export') ?> <?=$this->transEsc('Export')?></button></li>
         <?php endif; ?>
         <?php if (($actionLimits?->printcart ?? 0) > 0): ?>
-          <li><button id="<?=$this->idPrefix?>ribbon-print" class="toolbar-btn" type="submit" name="print" value="1" title="<?=$this->transEscAttr('bookbag_print_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('print') ?> <?=$this->transEsc('Print')?></button></li>
+          <li><button id="<?=$this->idPrefix?>ribbon-print" class="toolbar-btn" type="submit" name="print" value="1" title="<?=$this->transEscAttr('bookbag_print_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?> data-item-limit="<?=$actionLimits?->printcart?>"><?=$this->icon('print') ?> <?=$this->transEsc('Print')?></button></li>
         <?php endif; ?>
         <?php if (($actionLimits?->save ?? 0) > 0 && $this->userlist()->getMode() !== 'disabled'): ?>
-          <li><button id="<?=$this->idPrefix?>ribbon-save" class="toolbar-btn" type="submit" name="saveCart" value="1" title="<?=$this->transEscAttr('bookbag_save_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('user-list-add') ?> <?=$this->transEsc('Save')?></button></li>
+          <li><button id="<?=$this->idPrefix?>ribbon-save" class="toolbar-btn" type="submit" name="saveCart" value="1" title="<?=$this->transEscAttr('bookbag_save_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?> data-item-limit="<?=$actionLimits?->save?>"><?=$this->icon('user-list-add') ?> <?=$this->transEsc('Save')?></button></li>
         <?php endif; ?>
       <?php endif; ?>
       <?php if (isset($this->showCartControls) && $this->showCartControls): ?>
