--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -30,8 +30,8 @@
           const link = combinedJumpLinks?.querySelector('.$classId');
           if (link) {
             link.append(span);
-            link.style.display = "";
-            combinedJumpLinks.style.visibility = "";
+            link.style.display = "inline";
+            combinedJumpLinks.style.visibility = "inherit";
           }
         }
 
