--- a/themes/bootstrap3/templates/combined/jump-links.phtml
+++ b/themes/bootstrap3/templates/combined/jump-links.phtml
@@ -1,8 +1,8 @@
-<div class="combined-jump-links" style="visibility: hidden;">
+<div class="combined-jump-links">
   <span><?=$this->translate('combined_jump_links_intro')?></span>
   <ul>
     <?php foreach ($combinedResults as $section) : ?>
-      <li class="<?= $this->escapeHtmlAttr($section['domId']) ?>" style="display: none;">
+      <li class="<?= $this->escapeHtmlAttr($section['domId']) ?>">
         <a href="#<?= $this->escapeHtmlAttr($section['domId']) ?>"><?= $this->transEsc($section['label']) ?></a>
       </li>
     <?php endforeach; ?>
