using translate instead of transEsc

--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/explain-line.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/explain-line.phtml
@@ -13,7 +13,7 @@
       $value = $fieldValue[$i] ?? '';
       $exactMatch = $explainElement['exactMatch'][$i] ?? '';
       if (!empty($name)) {
-        $description = $this->transEsc('IndexFieldDescription::' . $name);
+        $description = $this->translate('IndexFieldDescription::' . $name);
         $description = $name !== $description ? $description : '';
       } else {
         $description = '';
