--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -22,39 +22,51 @@
         </label>
       </div>
       <ul class="cart-control-btns">
-        <?php if (($actionLimits?->save ?? 0) > 0 && $this->userlist()->getMode() !== 'disabled'): ?>
-          <li>
-            <button type="submit" class="toolbar-btn" name="saveCart" title="<?=$this->transEscAttr('bookbag_save')?>" value="1">
-              <?=$this->icon('user-list-add', 'icon-link__icon') ?>
-              <span class="icon-link__label"><?=$this->transEsc('Save')?></span>
-            </button>
-          </li>
+        <?php if ($this->userlist()->getMode() !== 'disabled'): ?>
+          <?=
+            $this->bulkAction()->button(
+                'saveCart',
+                'user-list-add',
+                'Save',
+                [
+                  'title' => $this->translate('bookbag_save'),
+                ]
+            )
+          ?>
         <?php endif; ?>
-        <?php if (($actionLimits?->email ?? 0) > 0): ?>
-          <li>
-            <button type="submit" class="toolbar-btn" name="email" title="<?=$this->transEscAttr('bookbag_email')?>" value="1">
-              <?=$this->icon('send-email', 'icon-link__icon') ?>
-              <span class="icon-link__label"><?=$this->transEsc('Email')?></span>
-            </button>
-          </li>
-        <?php endif; ?>
+        <?=
+          $this->bulkAction()->button(
+              'email',
+              'send-email',
+              'Email',
+              [
+                'title' => $this->translate('bookbag_email'),
+              ]
+          )
+        ?>
         <?php $exportOptions = $this->export()->getActiveFormats('bulk'); ?>
-        <?php if (($actionLimits?->export ?? 0) > 0 && count($exportOptions) > 0): ?>
-          <li>
-            <button type="submit" class="toolbar-btn" name="export" title="<?=$this->transEscAttr('bookbag_export')?>" value="1">
-              <?=$this->icon('export', 'icon-link__icon') ?>
-              <span class="icon-link__label"><?=$this->transEsc('Export')?></span>
-            </button>
-          </li>
+        <?php if (count($exportOptions) > 0): ?>
+          <?=
+            $this->bulkAction()->button(
+                'export',
+                'export',
+                'Export',
+                [
+                  'title' => $this->translate('bookbag_export'),
+                ]
+            )
+          ?>
         <?php endif; ?>
-        <?php if (($actionLimits?->printcart ?? 0) > 0): ?>
-          <li>
-            <button type="submit" class="toolbar-btn" name="print" title="<?=$this->transEscAttr('print_selected')?>" value="1" data-item-limit="<?=$actionLimits?->printcart?>">
-              <?=$this->icon('print', 'icon-link__icon') ?>
-              <span class="icon-link__label"><?=$this->transEsc('Print')?></span>
-            </button>
-          </li>
-        <?php endif; ?>
+        <?=
+          $this->bulkAction()->button(
+              'print',
+              'print',
+              'Print',
+              [
+                'title' => $this->translate('print_selected'),
+              ]
+          )
+        ?>
         <li class="btn-group" id="cartDelete">
           <button type="submit" name="delete" class="toolbar-btn dropdown-toggle" data-toggle="dropdown" id="cart-delete-label" value="1">
             <?=$this->icon('cart-remove', 'icon-link__icon') ?>
