--- a/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/myresearch/bulk-action-buttons.phtml
@@ -12,21 +12,64 @@ $actionLimits = $this->config()->get('config')?->BulkActions?->limits;
     <label for="myresearchCheckAll"><?=$this->transEsc('select_all_on_page')?></label>
   </div>
   <ul class="action-toolbar">
-    <?php if (($actionLimits?->email ?? 0) > 0): ?>
-      <li><button class="toolbar-btn" type="submit" name="email" value="1" title="<?=$this->transEscAttr('email_selected')?>" data-item-limit="<?=$actionLimits?->save?>"><?=$this->icon('send-email') ?> <?=$this->transEsc('Email') ?></button></li>
-    <?php endif; ?>
-    <?php if (($actionLimits?->delete ?? 0) > 0 && ((null !== $this->list && $this->list->editAllowed($user)) || null === $this->list && $user)): ?>
-      <li><button class="toolbar-btn" id="<?=$this->idPrefix?>delete_list_items_<?=null !== $this->list ? $this->escapeHtmlAttr($this->list->id) : ''?>" type="submit" name="delete" value="1" title="<?=$this->transEscAttr('delete_selected')?>" data-item-limit="<?=$actionLimits?->delete?>"><?=$this->icon('ui-delete') ?> <?=$this->transEsc('Delete') ?></button></li>
+    <?=
+      $this->bulkAction()->button(
+          'email',
+          'send-email',
+          'Email',
+          [
+            'title' => $this->translate('email_selected'),
+          ]
+      )
+    ?>
+    <?php if ((null !== $this->list && $this->list->editAllowed($user)) || null === $this->list && $user): ?>
+      <?=
+        $this->bulkAction()->button(
+            'delete',
+            'ui-delete',
+            'Delete',
+            [
+              'id' => $this->idPrefix . 'delete_list_items_' . (null !== $this->list ? $this->escapeHtmlAttr($this->list->id) : ''),
+              'title' => $this->translate('delete_selected'),
+            ]
+        )
+      ?>
     <?php endif; ?>
     <?php $exportOptions = $this->export()->getActiveFormats('bulk'); ?>
-    <?php if (($actionLimits?->export ?? 0) > 0 && count($exportOptions) > 0): ?>
-      <li><button class="toolbar-btn" type="submit" name="export" value="1" title="<?=$this->transEscAttr('export_selected')?>" data-item-limit="<?=$actionLimits?->export?>"><?=$this->icon('export') ?> <?=$this->transEsc('Export')?></button></li>
+    <?php if (count($exportOptions) > 0): ?>
+      <?=
+        $this->bulkAction()->button(
+            'export',
+            'export',
+            'Export',
+            [
+              'title' => $this->translate('export_selected'),
+            ]
+        )
+      ?>
     <?php endif; ?>
-    <?php if (($actionLimits?->printcart ?? 0) > 0): ?>
-      <li><button class="toolbar-btn" type="submit" name="print" value="1" title="<?=$this->transEscAttr('print_selected')?>" data-item-limit="<?=$actionLimits?->printcart?>" data-lightbox-ignore><?=$this->icon('print') ?> <?=$this->transEsc('Print')?></button></li>
-    <?php endif; ?>
+    <?=
+      $this->bulkAction()->button(
+          'print',
+          'print',
+          'Print',
+          [
+            'title' => $this->translate('print_selected'),
+            'data-lightbox-ignore' => '',
+          ]
+      )
+    ?>
     <?php if ($this->cart()->isActive()): ?>
-      <li><button class="toolbar-btn" id="<?=$this->idPrefix?>updateCart" type="submit" name="add" value="1"><?=$this->icon('cart-add') ?> <?=$this->transEsc('Add to Book Bag')?></button></li>
+      <?=
+        $this->bulkAction()->button(
+            'add',
+            'cart-add',
+            'Add to Book Bag',
+            [
+              'id' => $this->idPrefix . 'updateCart',
+            ]
+        )
+      ?>
     <?php endif; ?>
   </ul>
 </nav>
