--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -58,17 +58,6 @@ $thumbnail-width-large:  160px;
   .home-facet-list { flex: 0 1 100%; }
 }
 
-.searchForm {
-  margin: 0;
-  padding: 0;
-
-  @media (max-width: 767px) {
-    .input-group {
-      width: 100%;
-    }
-  }
-}
-
 header .container.navbar { margin-bottom: 0; }
 
 .search-sort, .search-result-limit { display: flex; }
@@ -683,36 +672,58 @@ table.search-history-table {
   }
 }
 
-.searchForm-query {
-  position: relative;
-  display: inline-block;
+.searchForm {
+  margin: 0;
+  padding: 0;
 
-  #searchForm_lookfor {
-    padding-right: 34px;
+  .searchForm-query {
+    position: relative;
 
-    &.with-keyboard-selection {
-      padding-right: 72px;
+    @media (min-width: 768px) {
+      display: inline-block;
+    }
+
+    #searchForm_lookfor {
+      padding-right: 34px;
+    }
+
+    /* Adjust padding for the virtual keyboard button */
+    @media (min-width: 401px) {
+      #searchForm_lookfor.with-keyboard-selection {
+        padding-right: 72px;
+      }
+    }
+
+    #searchForm_controls {
+      position: absolute;
+      right: 3px;
+      top: 5px;
+      z-index: 4;
+      height: 2em;
+    }
+
+    #searchForm-reset {
+      bottom: 0;
+      width: 2em;
+      border: none;
+      border-radius: 50%;
+      background-color: $gray-lighter;
+      margin: 0;
+      padding: 2px;
+      font-size: 1em;
+      cursor: pointer;
     }
   }
+}
 
-  #searchForm_controls {
-    position: absolute;
-    right: 3px;
-    top: 5px;
-    z-index: 4;
-    height: 2em;
+/* Hide virtual keyboard on narrow screens */
+@media (max-width: 400px) {
+  .keyboard-selection {
+    display: none;
   }
 
-  #searchForm-reset {
-    bottom: 0;
-    width: 2em;
-    border: none;
-    border-radius: 50%;
-    background-color: $gray-lighter;
-    margin: 0;
-    padding: 2px;
-    font-size: 1em;
-    cursor: pointer;
+  .show-keyboard, .simple-keyboard {
+    display: none;
   }
 }
 
