Simplify button styles.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -305,13 +305,5 @@ h3.facet-title {
 }
 
 #btn-reset-contains {
-  bottom: 0;
-  width: 2em;
-  border: none;
-  border-radius: 50%;
-  background-color: @gray-lighter;
-  margin: 0 0 0 2px;
-  padding: 2px;
-  font-size: 1em;
-  cursor: pointer;
+  &:extend(.btn .btn-default);
 }
