Adjust label alignment.

--- a/themes/bootprint3/scss/bootprint.scss
+++ b/themes/bootprint3/scss/bootprint.scss
@@ -189,3 +189,7 @@ ul.random.image li img { margin: 0 auto; }
 .jstree-facet .active > .jstree-anchor .facet {
   background-color: $active-orange;
 }
+
+.facet-lightbox-filter fieldset legend {
+  margin-top: 3px;
+}
