--- a/themes/bootstrap3/scss/components/sidebar.scss
+++ b/themes/bootstrap3/scss/components/sidebar.scss
@@ -293,7 +293,9 @@ h3.facet-title {
     padding: 0;
     gap: 4px;
     width: auto;
+    height: 2em;
     legend {
+      margin-top: 2px;
       width: auto;
       display: inline;
       border: 0;
