--- a/themes/bootstrap3/templates/record/view.phtml
+++ b/themes/bootstrap3/templates/record/view.phtml
@@ -7,6 +7,11 @@
   // Set up standard record scripts:
   $this->headScript()->appendFile('record.js');
   $this->headScript()->appendFile('check_save_statuses.js');
+
+  // Add carousel library for Similar Items
+  $this->headScript()->appendFile('vendor/splide.min.js');
+  $this->headLink()->appendStylesheet('vendor/splide.min.css');
+
   // Activate Syndetics Plus if necessary:
   if ($this->syndeticsPlus()->isActive()) {
     $this->headScript()->appendFile($this->syndeticsPlus()->getScript());
@@ -63,20 +68,6 @@
               }
               if (!$obj->supportsAjax()) {
                 $tabClasses[] = 'noajax';
-              }
-
-              $deps = $obj->getDependencies();
-              if (!empty($deps)) {
-                if (!empty($deps['css'])) {
-                  foreach($deps['css'] as $css) {
-                    $this->headLink()->appendStylesheet($css);
-                  }
-                }
-                if (!empty($deps['js'])) {
-                  foreach($deps['js'] as $js) {
-                    $this->headScript()->appendFile($js);
-                  }
-                }
               }
             ?>
             <li id="record-tab-<?=$this->escapeHtmlAttr($tabName)?>" class="<?=implode(' ', $tabClasses)?>" role="tab" data-tab="<?=$this->escapeHtmlAttr($tabName)?>"<?php if ($obj->supportsAjax() && in_array($tab, $this->backgroundTabs)):?> data-background<?php endif ?>>
