--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -130,6 +130,40 @@
       <?=$this->recommend($current)?>
     <?php endif; ?>
   <?php endforeach; ?>
+  <?php foreach ($results->getRecommendations('noresults_side') as $current): ?>
+    <?php if (!in_array($current, $top)):
+      $recommendationClass = str_replace('\\', '_', $current::class);
+      $recommendationJs = <<<JS
+          function addRecommendation_$recommendationClass() {
+            const recommendationContainer = document.querySelector('#search-sidebar .recommendation_container__$recommendationClass');
+            if (!recommendationContainer) {
+              console.error("Cannot find recommendation container for $recommendationClass");
+              return;
+            }
+
+            const recommendation = document.getElementById('recommendation__$recommendationClass');
+            if (!recommendation) {
+              console.error("Cannot find recommendation for $recommendationClass");
+              return;
+            }
+
+            recommendationContainer.append(recommendation);
+            recommendation.style.display = 'inherit';
+          }
+
+          if (document.readyState != 'loading') {
+            addRecommendation_$recommendationClass();
+          } else {
+            document.addEventListener('DOMContentLoaded', addRecommendation_$recommendationClass);
+          }
+          JS;
+      ?>
+      <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, $recommendationJs, 'SET')?>
+      <div id="recommendation__<?=$recommendationClass?>" style="display: none;">
+        <?=$this->recommend($current)?>
+      </div>
+    <?php endif; ?>
+  <?php endforeach; ?>
 <?php else: ?>
   <?php
     $viewType = in_array('list', array_keys($params->getViewList()))
