--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -447,6 +447,45 @@ ul.list-group {
   }
 }
 
+/* ------ Responsive table for small screen size ------ */
+@media screen and (max-width: 768px) {
+  .table-responsive {
+    border: none;
+    thead {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      padding: 0;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      border: 0;
+    }
+    tr {
+      display: block;
+      margin-bottom: $line-height-computed;
+      border-left: 1px solid $table-border-color;
+      border-right: 1px solid $table-border-color;
+      border-bottom: 4px solid $table-border-color;
+    }
+    td {
+      display: flex;
+      align-items: first baseline;
+      background: #fff;
+      &:before {
+        display: flex;
+        flex-basis: 40%;
+        flex-shrink: 0;
+        font-weight: bold;
+        content: attr(data-label);
+      }
+    }
+    td:nth-child(even) {
+      background-color: $table-bg-accent;
+    }
+  }
+}
+
 /* ------ Visualization View ------ */
 .node {
   position: absolute;
