--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -76,7 +76,7 @@ $alert-warning-text:          $state-warning-text !default;
 
 $text-color: $body-color !default;
 
-$modal-title-padding: $modal-header-padding;
+$modal-title-padding: $modal-header-padding !default;
 
 $well-bg:                #f5f5f5 !default;
 $well-border:            darken($well-bg, 7%) !default;
@@ -111,11 +111,15 @@ button.list-group-item {
   text-align: left;
 }
 
+.badge {
+  background-color: $secondary;
+}
+
 .label {
   @extend .badge;
 }
 .label-info {
-  color: contrast($primary, $text-color, $body-bg);
+  color: $body-bg;
   background-color: $primary;
 }
 
