--- a/themes/bootstrap3/templates/myresearch/checkedout.phtml
+++ b/themes/bootstrap3/templates/myresearch/checkedout.phtml
@@ -111,7 +111,11 @@
           <?php endif; ?>
 
           <?php
-            $coverDetails = $this->record($resource)->getCoverDetails('checkedout', 'small', $this->recordLinker()->getUrl($resource));
+          if(!empty($resource->getExtraDetail('ils_details')['id'])){
+              $coverDetails = $this->record($resource)->getCoverDetails('checkedout', 'small', $this->recordLinker()->getUrl($resource));
+          }else{
+              $coverDetails['html'] = "<img src='" . $this->imageLink('InnReachCover.png') . "' alt='book cover -" . $resource->getTitle() ."' />";
+          }
             $cover = $coverDetails['html'];
             $thumbnail = false;
             $thumbnailAlignment = $this->record($resource)->getThumbnailAlignment('account');
