Fix badge color.

--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -115,7 +115,7 @@ button.list-group-item {
 }
 
 .badge {
-  background-color: $secondary;
+  background-color: #595959; // $badge-bg is not yet defined here
 }
 
 .label {
