--- a/themes/sandal/scss/sandal.scss
+++ b/themes/sandal/scss/sandal.scss
@@ -70,7 +70,7 @@ header {
     border-color: $black;
   }
   .nav > li > a,
-  .navbar-nav button.dropdown-toggle {
+  .nav.navbar-nav button.dropdown-toggle {
     &:hover,
     &:focus {
       color: $black;
