Use variable overrides from a11y, setup alert colors properly, add more bs3-compat variables.

--- a/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
+++ b/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
@@ -1,29 +1,43 @@
-$nav-link-padding-y: 1rem !default;
-
+// From a11y:
 $primary:         #265680 !default;
-$success:         #028302 !default;
-$info:            #1C5F74 !default;
-$warning:         #A56100 !default;
-$danger:          #A41915 !default;
+$success:         #3c763d !default;
+$info:            #31708f !default;
+$warning:         #8a6d3b !default;
+$danger:          #a94442 !default;
+$link-color:      #12538B !default;
 
-$breadcrumb-bg:                 #f5f5f5 !default;
+$success-bg-subtle:         #dff0d8 !default;
+$success-border-subtle:     darken(adjust-hue($success-bg-subtle, -10), 5%) !default;
+
+$info-bg-subtle:            #d9edf7 !default;
+$info-border-subtle:        darken(adjust-hue($info-bg-subtle, -10), 5%) !default;
+
+$warning-bg-subtle:         #fcf8e3 !default;
+$warning-border-subtle:     darken(adjust-hue($warning-bg-subtle, -10), 5%) !default;
+
+$danger-bg-subtle:          #f2dede !default;
+$danger-border-subtle:      darken(adjust-hue($danger-bg-subtle, -10), 5%) !default;
+
+$breadcrumb-bg:                     #f5f5f5 !default;
 $breadcrumb-padding-y:              8px !default;
 $breadcrumb-padding-x:              15px !default;
 
-$navbar-nav-link-padding-x: 1rem !default;
-$navbar-light-color: $primary !default;
+$nav-link-padding-y:                1rem !default;
+$navbar-nav-link-padding-x:         1rem !default;
+$navbar-light-color:                $primary !default;
 
 // Disable transitions to allow the bs3-compat.js to do its work without visual distractions:
 $enable-transitions: false !default;
 
 // Disable several default icons:
-$accordion-button-active-icon: none !default;
+$accordion-button-active-icon:      none !default;
 $accordion-button-active-icon-dark: none !default;
-$accordion-button-icon: none !default;
-$accordion-button-icon-dark: none !default;
-$form-select-indicator: none !default;
-$form-select-indicator-dark: none !default;
-$form-switch-bg-image: none !default;
-$form-switch-bg-image-dark: none !default;
-$navbar-dark-toggler-icon-bg: none !default;
-$navbar-light-toggler-icon-bg: none !default;
+$accordion-button-icon:             none !default;
+$accordion-button-icon-dark:        none !default;
+$form-select-indicator:             none !default;
+$form-select-indicator-dark:        none !default;
+$form-switch-bg-image:              none !default;
+$form-switch-bg-image-dark:         none !default;
+$navbar-dark-toggler-icon-bg:       none !default;
+$navbar-light-toggler-icon-bg:      none !default;
+
