Make default sort configurable for new items.

--- a/themes/bootstrap3/templates/search/newitem.phtml
+++ b/themes/bootstrap3/templates/search/newitem.phtml
@@ -13,6 +13,9 @@
   <?=$this->render('Helpers/ils-offline.phtml', ['offlineModeMsg' => 'ils_offline_holdings_message'])?>
 <?php endif; ?>
 <form method="get" class="form-search-newitem">
+  <?php if (!empty($this->defaultSort)): ?>
+    <input type="hidden" name="sort" value="<?=$this->escapeHtmlAttr($this->defaultSort)?>">
+  <?php endif; ?>
   <div class="form-group">
     <label class="control-label"><?=$this->transEsc('Range')?>:</label>
     <div class="btn-group" data-toggle="buttons">
