--- a/themes/bootstrap3/templates/search/newitem.phtml
+++ b/themes/bootstrap3/templates/search/newitem.phtml
@@ -27,6 +27,7 @@
       <?php endforeach; ?>
     </div>
   </div>
+  <?=$this->render('search/advanced/solr-facets.phtml')?>
   <?php if (is_array($this->fundList) && !empty($this->fundList)): ?>
     <div class="form-group">
       <label class="control-label" for="newitem_department"><?=$this->transEsc('Department')?>:</label>
