--- a/themes/bootstrap3/templates/notifications/deletebroadcast.phtml
+++ b/themes/bootstrap3/templates/notifications/deletebroadcast.phtml
@@ -29,5 +29,5 @@
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
-    <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'broadcasts'])?>
+    <?=$this->context($this)->renderInContext('myresearch/menu.phtml', ['active' => 'broadcasts'])?>
 </div>
