--- a/themes/bootstrap3/templates/admin/notifications/home.phtml
+++ b/themes/bootstrap3/templates/admin/notifications/home.phtml
@@ -10,5 +10,5 @@
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>">
-  <?=$this->render("admin/menu.phtml")?>
+  <?=$this->render('admin/menu.phtml')?>
 </div>
