--- a/themes/bootstrap3/templates/notifications/broadcasts.phtml
+++ b/themes/bootstrap3/templates/notifications/broadcasts.phtml
@@ -55,5 +55,5 @@
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>">
-    <?=$this->render("admin/menu.phtml")?>
+    <?=$this->render('admin/menu.phtml')?>
 </div>
