--- a/themes/bootstrap3/templates/notifications/editbroadcast.phtml
+++ b/themes/bootstrap3/templates/notifications/editbroadcast.phtml
@@ -24,5 +24,5 @@
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>">
-    <?=$this->render("admin/menu.phtml")?>
+    <?=$this->render('admin/menu.phtml')?>
 </div>
