--- a/themes/bootstrap3/templates/notifications/pages.phtml
+++ b/themes/bootstrap3/templates/notifications/pages.phtml
@@ -46,5 +46,5 @@
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>">
-    <?=$this->render("admin/menu.phtml")?>
+    <?=$this->render('admin/menu.phtml')?>
 </div>
