--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -54,7 +54,8 @@
         template.innerHTML = "<span class='record-total'>(" + count + ")</span>";
         const span = template.content.children[0];
 
-        const link = document.querySelector('.combined-jump-links .$classId');
+        const combinedJumpLinks = document.querySelector('.combined-jump-links');
+        const link = combinedJumpLinks?.querySelector('.$classId');
         if (link) {
           link.append(span);
           link.style.display = "inline";
