--- a/themes/bootstrap3/templates/RecordTab/collectionhierarchytree.phtml
+++ b/themes/bootstrap3/templates/RecordTab/collectionhierarchytree.phtml
@@ -9,7 +9,7 @@
       <?php if ($collectionRecord === null): ?>
         <?=$this->render('collection/collection-record-error.phtml')?>
       <?php else: ?>
-        <?=html_entity_decode($this->record($collectionRecord)->getCollectionBriefRecord())?>
+        <?=$this->record($collectionRecord)->getCollectionBriefRecord()?>
       <?php endif; ?>
     <?php endif; ?>
   </div>
