--- a/themes/sandal/less/sandal.less
+++ b/themes/sandal/less/sandal.less
@@ -221,9 +221,7 @@ a:hover .login-dropdown-caret {
   .facet.active,
   .facet.active:hover,
   .active-filters .facet,
-  .active-filters .facet:hover,
-  .active .jstree-anchor,
-  .jstree-facet .jstree-container-ul > .active {
+  .active-filters .facet:hover {
     border-color: @sidebar-active-bg;
     background-color: @sidebar-active-bg;
     color: @sidebar-active-color;
@@ -250,11 +248,6 @@ a:hover .login-dropdown-caret {
   max-height: 19px;
   line-height: .8;
   background-color: @sidebar-item-badge;
-}
-
-.jstree-facet {
-  .main .fa-check { margin-top: 3px; }
-  .jstree-icon::before { margin-top: 2px; }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
