--- a/themes/bootstrap3/templates/RecordTab/staffviewmarc.phtml
+++ b/themes/bootstrap3/templates/RecordTab/staffviewmarc.phtml
@@ -3,7 +3,12 @@
     $this->headTitle($this->translate('Staff View') . ': ' . $this->driver->getBreadcrumb());
 ?>
 <h2>MARC</h2>
-<?=\VuFind\XSLT\Processor::process('record-marc.xsl', $this->driver->getXML('marc21'))?>
+<?php $xml = $this->driver->getXML('marc21'); ?>
+<?php if ($xml !== false): ?>
+  <?=\VuFind\XSLT\Processor::process('record-marc.xsl', $xml)?>
+<?php else: ?>
+  <?=$this->translate('error_creating_marc_xml')?>
+<?php endif; ?>
 <?php if ($this->config()->alwaysDisplayIndexRecordInStaffView()): ?>
     <h2><?=$this->transEsc('Record in the Search Index')?></h2>
     <?=$this->render('RecordTab/staffviewarray.phtml')?>
