Use a new 'more_results_ellipsis" translation string

--- a/themes/bootstrap3/templates/Recommend/ConsortialVuFind.phtml
+++ b/themes/bootstrap3/templates/Recommend/ConsortialVuFind.phtml
@@ -24,7 +24,7 @@
       <?php endforeach; ?>
       <a class="list-group-item" href="<?=$moreResultsUrl?>">
         <?=$this->icon('external-link', 'icon-link__icon') ?>
-        <?=$this->transEsc('More results')?>...
+        <?=$this->transEsc('more_results_ellipsis')?>
       </a>
     </ul>
   <?php endif; ?>
