Remove unused param

--- a/themes/bootstrap3/templates/Recommend/EDSResultsDeferred.phtml
+++ b/themes/bootstrap3/templates/Recommend/EDSResultsDeferred.phtml
@@ -1,1 +1,1 @@
-<?=$this->deferredRecommend($this->recommend->getUrlParams(), 'edsResultsDeferredRecommend')?>
+<?=$this->deferredRecommend('edsResultsDeferredRecommend')?>
