Catch empty heading

--- a/themes/bootstrap3/templates/Recommend/ConsortialVuFind.phtml
+++ b/themes/bootstrap3/templates/Recommend/ConsortialVuFind.phtml
@@ -3,13 +3,15 @@
   <?php $records = $results['records'] ?? [] ?>
   <?php $resultCount = $results['resultCount'] ?? 0; ?>
   <?php $moreResultsUrl = $this->recommend->getMoreResultsUrl(); ?>
-  <?php if (!empty($records)): ?>
-    <h2><?=$this->transEsc('consortial_vufind_recommend_heading')?></h2>
-    <?php if ($this->translate('consortial_vufind_recommend_intro_html', [], '')): ?>
-      <p><?=$this->translate('consortial_vufind_recommend_intro_html', [
+  <?php $intro = $this->translate('consortial_vufind_recommend_intro_html', [
           '%%result_count%%' => $this->localizedNumber($resultCount),
           '%%url%%' => $moreResultsUrl,
-      ])?></p>
+  ]); ?>
+
+  <?php if (!empty($records)): ?>
+    <h2><?=$this->transEsc('consortial_vufind_recommend_heading')?></h2>
+    <?php if (!empty($intro) && ("\u{200c}" !== $intro)): ?>
+      <p><?=$intro?></p>
     <?php endif; ?>
     <ul class="list-group">
       <?php foreach ($records as $record): ?>
