--- a/themes/bootstrap3/templates/Recommend/AbstractSearchObjectDeferred.phtml
+++ b/themes/bootstrap3/templates/Recommend/AbstractSearchObjectDeferred.phtml
@@ -1,5 +1,7 @@
 <?php
     // Set up Javascript for use below:
+    $classParts = explode('\\', $this->recommend::class);
+    $containerId = array_pop($classParts) . 'Recommend';
     $loadJs = 'var url = VuFind.path + "/AJAX/Recommend?' . $this->recommend->getUrlParams() . '";'
         . "VuFind.loadHtml(\$('#$containerId'), url);";
 ?>
