--- a/themes/bootstrap3/templates/Recommend/ConsortialVuFind.phtml
+++ b/themes/bootstrap3/templates/Recommend/ConsortialVuFind.phtml
@@ -3,16 +3,16 @@
   <?php $records = $results['records'] ?? [] ?>
   <?php $resultCount = $results['resultCount'] ?? 0; ?>
   <?php $moreResultsUrl = $this->recommend->getMoreResultsUrl(); ?>
-  <?php $intro = $this->translate('consortial_vufind_recommend_intro_html', [
-          '%%result_count%%' => $this->localizedNumber($resultCount),
-          '%%url%%' => $moreResultsUrl,
-  ]); ?>
 
   <?php if (!empty($records)): ?>
     <h2><?=$this->transEsc('consortial_vufind_recommend_heading')?></h2>
-    <?php /* \u200c is an empty translation value; see ExtendedIniReader.php. */ ?>
-    <?php if (!empty($intro) && ("\u{200c}" !== $intro)): ?>
-      <p><?=$intro?></p>
+    <?php if (!$this->translationEmpty('consortial_vufind_recommend_intro_html')): ?>
+      <p>
+        <?=$this->translate('consortial_vufind_recommend_intro_html', [
+          '%%result_count%%' => $this->localizedNumber($resultCount),
+          '%%url%%' => $moreResultsUrl,
+        ])?>
+      </p>
     <?php endif; ?>
     <ul class="list-group">
       <?php foreach ($records as $record): ?>
