--- a/themes/bootstrap3/templates/Recommend/AbstractSearchObjectDeferred.phtml
+++ b/themes/bootstrap3/templates/Recommend/AbstractSearchObjectDeferred.phtml
@@ -1,9 +1,11 @@
 <?php
     // Set up Javascript for use below:
+    $classParts = explode('\\', $this->recommend::class);
+    $containerId = array_pop($classParts) . 'Recommend';
     $loadJs = 'var url = VuFind.path + "/AJAX/Recommend?' . $this->recommend->getUrlParams() . '";'
-        . "VuFind.loadHtml(\$('#EuropeanaDeferredRecommend'), url);";
+        . "VuFind.loadHtml(\$('#$containerId'), url);";
 ?>
-<div id="EuropeanaDeferredRecommend">
+<div id="<?=$containerId?>">
     <p><?=$this->icon('spinner') ?> <?=$this->transEsc('loading_ellipsis')?></p>
     <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, $loadJs, 'SET')?>
 </div>
