--- a/themes/bootstrap3/templates/search/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/search/bulk-action-buttons.phtml
@@ -1,16 +1,14 @@
 <?php
-  $showBulkOptions = $this->searchSettings($this->params)->bulkOptionsEnabled();
-  $showCartControls = $this->searchSettings($this->params)->cartControlsEnabled();
-  $showCheckboxes = $this->searchSettings($this->params)->checkboxesEnabled();
+  $searchSettings = $this->searchSettings($this->params);
 ?>
-<?php if ($showCheckboxes): ?>
+<?php if ($searchSettings->checkboxesEnabled()): ?>
   <nav class="bulkActionButtons">
     <div class="bulk-checkbox">
       <input type="checkbox" class="checkbox-select-all" name="selectAll" id="<?=$this->idPrefix?>addFormCheckboxSelectAll"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>>
       <label for="<?=$this->idPrefix?>addFormCheckboxSelectAll"><?=$this->transEsc('select_all_on_page')?></label>
     </div>
     <ul class="action-toolbar">
-      <?php if ($showBulkOptions): ?>
+      <?php if ($searchSettings->bulkOptionsEnabled()): ?>
         <li><button id="<?=$this->idPrefix?>ribbon-email" class="toolbar-btn" type="submit" name="email" value="1" title="<?=$this->transEscAttr('bookbag_email_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('send-email') ?> <?=$this->transEsc('Email')?></button></li>
         <?php $exportOptions = $this->export()->getActiveFormats('bulk'); ?>
         <?php if (count($exportOptions) > 0): ?>
@@ -21,7 +19,7 @@
           <li><button id="<?=$this->idPrefix?>ribbon-save" class="toolbar-btn" type="submit" name="saveCart" value="1" title="<?=$this->transEscAttr('bookbag_save_selected')?>"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('user-list-add') ?> <?=$this->transEsc('Save')?></button></li>
         <?php endif; ?>
       <?php endif; ?>
-      <?php if ($showCartControls): ?>
+      <?php if ($searchSettings->cartControlsEnabled()): ?>
         <li><button id="<?=$this->idPrefix?>updateCart" type="submit" class="toolbar-btn" name="add" value="1"<?php if ($this->formAttr): ?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>><?=$this->icon('cart-add') ?> <?=$this->transEsc('Add to Book Bag')?></button></li>
       <?php endif; ?>
     </ul>
